@@ -5,6 +5,9 @@ Summary of important user-visible changes for statistics 1.2.1:
 
       pcares  pcacov
 
+ ** dendogram now returns the leaf node numbers and order that the nodes were
+    displayed in.
+
 Summary of important user-visible changes for statistics 1.2.0:
 -------------------------------------------------------------------
 
